Finalizing portfolio filled project blanks added source/demo/documentation urls redesign jumbotron with contacts project cleanup

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -18,7 +18,7 @@
 /* Links */
 
 a, a:focus, a:hover {
-  color: var(--primary-color);
+  color: var(--primary-dark-color);
 }
 
 /* Base structure */
@@ -122,12 +122,24 @@ canvas {
 /* Jumbotron */
 
 .jumbotron {
+  padding-bottom: 0;
   color: #fff;
-  background: linear-gradient(-45deg, #615756, #503D3F, #23D5AB);
+  background: linear-gradient(-45deg, #23D5AB, #615756, #503D3F);
   background-size: 700% 700%;
   -webkit-animation: Gradient 15s ease infinite;
   -moz-animation: Gradient 15s ease infinite;
   animation: Gradient 15s ease infinite;
+}
+
+/* Contact */
+
+.contact {
+  color: var(--primary-dark-color);
+  padding-bottom: 0;
+  margin-bottom: 1em;
+  padding-top: 1rem;
+  padding-left: 1rem;
+  padding-bottom: 1px;
 }
 
 @-webkit-keyframes Gradient {
